# simpleGoogleTestExample

./: CMakeLists.txt  README.md
.circleci/: config.yml
inc/: fib.h  lib.h  subtract.h
src/: fib.c  subtract.c
tests/unit_tests/: SomeTest.cpp  fib_test.cpp  fib_test.h
